--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Cormorant";
+  src: url("../public/Cormorant_Garamond/CormorantGaramond-Regular.ttf");
+}
+
 html,
 body {
   padding: 0;
@@ -13,8 +18,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
